Добавлен единый класс обработки ошибок для всех запросов парсера

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=5003
-DB_NAME=wb_data2
+DB_NAME=wbdata
 DB_USER=postgres
 DB_PASSWORD=admin
 DB_HOST=localhost
@@ -8,7 +8,7 @@ ACCESS_SECRET_KEY=my_super_key_marat
 REFRESH_SECRET_KEY=my_super_key_marat_refresh
 TEL_CHART_ID=-939616748
 #для отладки фронта на локал
-API_URL=http://localhost:5002
+API_URL=http://localhost:5003
 CLIENT_URL=http://localhost:3000
 GLOBAL_YEARDATAUPDATE=2023
 #для деплоя на сервере
