все посл обновы

--- a/.env
+++ b/.env
@@ -9,14 +9,19 @@ REFRESH_SECRET_KEY=my_super_key_marat_refresh
 TEL_CHART_ID=-939616748
 #для отладки фронта на локал
 API_URL=http://localhost:5003
-CLIENT_URL=http://localhost:3000
-GLOBAL_YEARDATAUPDATE=2023
+; CLIENT_URL=http://localhost:3000
+
+
+; CLIENT_URL=https://wbsale.ru.tuna.am
+;
+CLIENT_URL=https://wb.sale
+
 #для деплоя на сервере
 #CLIENT_URL=https://bm-algoritmik.ru
 #API_URL=https://server.bm-algoritmik.ru
 #Сыылки для Парсинга данных с WB
 WB_URL_GET_ALL_CATALOG=`https://static-basket-01.wbbasket.ru/vol0/data/main-menu-ru-ru-v3.json`
-#WB_URL_GET_ALL_PRODUCTS=`https://catalog.wb.ru/catalog/${shard}/catalog?appType=1&curr=rub&dest=-1257786&locale=ru&page=${page}&priceU=${priceU}&sort=popular&spp=0&${query}&discount=${discount}`
+
 MIN_TOTAL_QUANTITY=3
 //Таблица
 MASTER_PRODUCT_LIST_TABLE='productList0'
