все посл обновы

--- a/.env
+++ b/.env
@@ -6,25 +6,30 @@ DB_USER=postgres
 DB_PASSWORD=admin
 DB_HOST=localhost
 DB_PORT=5432
+
 ACCESS_SECRET_KEY=my_super_key_marat
 REFRESH_SECRET_KEY=my_super_key_marat_refresh
 TEL_CHART_ID=-939616748
 #для отладки фронта на локал
 API_URL=http://localhost:5003
 ; CLIENT_URL=http://localhost:3000
+SMTP_HOST="smtp.mail.ru"
+SMTP_PORT=465
+SMTP_USER=mp-tracker@mail.ru
+SMTP_PASSWORD=msd5creBr4eW5e6YgCJP
 
 
+BOT_API='7969263554:AAGig33BrK58QLtJA-nERaUK374LMMYS5tM'
+
+CLIENT_SITE=mp-tracker.ru
 ; CLIENT_URL=https://wbsale.ru.tuna.am
-;
-CLIENT_URL=https://wb.sale
+CLIENT_URL=https://mp-tracker.ru
 
 #для деплоя на сервере
 #CLIENT_URL=https://bm-algoritmik.ru
 #API_URL=https://server.bm-algoritmik.ru
-#Сыылки для Парсинга данных с WB
-WB_URL_GET_ALL_CATALOG=`https://static-basket-01.wbbasket.ru/vol0/data/main-menu-ru-ru-v3.json`
 
-MIN_TOTAL_QUANTITY=3
-//Таблица
-MASTER_PRODUCT_LIST_TABLE='productList0'
+
+
+
 
