--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.7.7",
+    "axios": "1.12.0",
     "axios-https-proxy-fix": "^0.17.1",
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
@@ -24,11 +24,12 @@
     "mongoose": "^7.0.1",
     "node-cron": "^3.0.2",
     "node-telegram-bot-api": "^0.63.0",
-    "nodemailer": "^6.9.1",
+    "nodemailer": "7.0.11",
     "pg": "^8.10.0",
     "pg-hstore": "^2.3.4",
     "request": "^2.88.2",
     "sequelize": "^6.29.3",
+    "telegraf": "^4.16.3",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
